@@ -1,8 +1,10 @@
+dhcpcd-3.0.2
+Linux systems without glibc-2.3 don't have getifaddrs, so we define our own.
 Changed the default timeout to 20 seconds, allowing hme Sparc drivers to work.
 Set the rfds correctly so we can get a reply after re-sending a request.
 Set the seconds elasped and maximum message size correctly in DHCP messages.
 Now compiles on Linux 2.4 kernels. 
-xmalloc dhcp objects so we can swap pointer around easily.
+xmalloc dhcp objects so we can swap the pointers around easily.
 
 dhcpcd-3.0.1
 Quote all vars in the info file.
